<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RadioSpinner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn1">RadioDemo</string>
    <string name="btn2">SpinnerDemo</string>
    <string name="btn3">IntentDemo</string>
	<string name="rbtn1">Red</string>
	<string name="rbtn2">Yellow</string>
	<string name="rbtn3">Green</string>
	<string name="rbtn4">Blue</string>
	<string name="btn_intent">Send</string>
	<string name="btn4">Dialogs Demo</string>
	<string name="dbtn1">Alert Dialog</string>
	<string name="dbtn2">List Dialog</string>
	<string name="dbtn3">Custom Dialog</string>
	<string name="cust_edit_hint">Username</string>
	<string name="pass">password</string>
	<string name="login">Login</string>
	<string name="btn5">Progress Bars</string>
	<string name="btn6">MenuDemo</string>
	<string name="submenu">Submenu</string>
	<string name="cancel">Cancel</string>
	<string name="btn7">ListViewDemo</string>
	<string name="btn8">Custom List View</string>
	<string name="btn9">ListCounter</string>
	<string name="btn10">Message</string>
	<string name="btn11">GridView</string>
    <string name="btn12">Video View</string>
    <string name="btn13">Web View</string>
    <string name="btn14">Http</string>
    <string name="btn15">Maps</string>
    <string name="btn16">Camera</string>
    <string name="btn17">Fragment Demo</string>
    <string name="btn18">ViewPager Demo</string>
    <string name="fragButton">Change Fragment</string>
    <string name="title_activity_camera_picture">CameraPicture</string>
    <string name="title_activity_auto_text">AutoTextActivity</string>
    <string name="title_activity_fragmentd_demo">FragmentdDemoActivity</string>
    <string name="title_activity_view_pager_demo">ViewPagerDemoActivity</string>
</resources>