<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@drawable/button_selector"
        android:text="@string/btn1"
		android:layout_marginTop="5dip"        
	/>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:layout_centerInParent="true"
        android:background="@drawable/button_selector"
        android:text="@string/btn2" 
        android:layout_marginTop="5dip"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_centerInParent="true"
        android:background="@drawable/button_selector"
        android:text="@string/btn3" 
        android:layout_marginTop="5dip"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:layout_centerInParent="true"
		android:layout_marginTop="5dip"        
        android:background="@drawable/button_selector"
        android:text="@string/btn4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button4"
        android:layout_centerInParent="true"
		android:layout_marginTop="5dip"        
        android:background="@drawable/button_selector"
        android:text="@string/btn5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button5"
		android:layout_marginTop="5dip"        
        android:layout_centerInParent="true"
        android:background="@drawable/button_selector"
        android:text="@string/btn6" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button6"
		android:layout_marginTop="5dip"        
        android:layout_centerInParent="true"
        android:background="@drawable/button_selector"
        android:text="@string/btn7" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button7"
        android:layout_centerInParent="true"
		android:layout_marginTop="5dip"        
        android:background="@drawable/button_selector"
        android:text="@string/btn8" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
		android:layout_marginTop="5dip"        
        android:layout_height="wrap_content"
        android:layout_below="@id/button8"
        android:layout_centerInParent="true"
        android:background="@drawable/button_selector"
        android:text="@string/btn9" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
		android:layout_marginTop="5dip"        
        android:layout_height="wrap_content"
        android:layout_below="@id/button9"
        android:layout_centerInParent="true"
        android:background="@drawable/button_selector"
        android:text="@string/btn10" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button10"
		android:layout_marginTop="5dip"        
        android:layout_centerInParent="true"
        android:background="@drawable/button_selector"
        android:text="@string/btn11" />
    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button11"
        android:layout_marginTop="5dip"
        android:layout_centerInParent="true"
        android:background="@drawable/button_selector"
        android:text="@string/btn12" />
    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button12"
        android:layout_marginTop="5dip"
        android:layout_centerInParent="true"
        android:background="@drawable/button_selector"
        android:text="@string/btn13" />
    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button13"
        android:layout_marginTop="5dip"
        android:layout_centerInParent="true"
        android:background="@drawable/button_selector"
        android:text="@string/btn14" />
    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button14"
        android:layout_marginTop="5dip"
        android:layout_centerInParent="true"
        android:background="@drawable/button_selector"
        android:text="@string/btn15" />
    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button15"
        android:layout_marginTop="5dip"
        android:layout_centerInParent="true"
        android:background="@drawable/button_selector"
        android:text="@string/btn16" />


</RelativeLayout>
</ScrollView>