<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/custtext1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cust_edit_hint"
        />
    <EditText
        android:id="@+id/custedit1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cust_edit_hint"
        >
    </EditText>
    <TextView 
        android:id="@+id/custtext2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        />
    <EditText
        android:id="@+id/custedit2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        >
    </EditText>
    
    <Button
        android:id="@+id/custbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        />
    <Button
        android:id="@+id/custbutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        />
        

</LinearLayout>