<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button 
        android:id="@+id/dbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbtn1"
        />
	<Button 
	    android:id="@+id/dbutton2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/dbtn2"/>
	<Button 
	    android:id="@+id/dbutton3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/dbtn3"/>
	
	<TextView
	    android:id="@+id/dialogtext1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textIsSelectable="true"/>
	<TextView
	    android:id="@+id/dialogtext2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	/>	
</LinearLayout>